--- a/app/Tpl/main/fanwe/css/styletrun.css
+++ b/app/Tpl/main/fanwe/css/styletrun.css
@@ -51,7 +51,7 @@ input{
     .g_3_tit{
         width:100%;
         height:33px;
-        background:url(../images/shigua/ggl/titbg.png) left center no-repeat;
+        /*background:url(../images/shigua/ggl/titbg.png) left center no-repeat;*/
         margin-bottom:10px;
         background-size:100% 100%;
     }
@@ -70,7 +70,7 @@ input{
     }
     .g_3_tit{
         width:100%;height:33px;
-        background:url(../images/shigua/ggl/titbg.png) left center no-repeat;
+        /*background:url(../images/shigua/ggl/titbg.png) left center no-repeat;*/
         margin-bottom:10px;
         background-size:100% 100%;
     }
