--- a/app/Tpl/main/fanwe/css/scratch/style.css
+++ b/app/Tpl/main/fanwe/css/scratch/style.css
@@ -22,9 +22,9 @@ figcaption{
 #bridge {
   display: block;
   margin: 0 auto;
-  background-image: url("../images/scratch/img/scratch-2.jpg");
+  /*background-image: url("../images/scratch/img/scratch-2.jpg");
   background-image: -webkit-image-set(url("../images/scratch/img/scratch-2.jpg") 1x, url("../images/scratch/img/scratch-2x.jpg") 2x);
-  background-size: cover;
+  */background-size: cover;
   width: 100%;
   max-width: 750px;
   height: auto;
@@ -38,9 +38,47 @@ figcaption{
   width:285px;
   height:145px;
   position: absolute;
-  top:191px;
+  top:189px;
   left:260px;
   overflow: hidden;
+
+}
+#redux{
+
+    width:285px;
+    height:145px;
+    position:relative;
+    z-index: 22;
+
+}
+#mask_img_bg {
+    position: absolute;
+    left: 0.2rem;
+    top: 0.2rem;
+    bottom: 0.2rem;
+    right: 0.2rem;
+    background: #fff;
+    border-radius: 6px;
+    -webkit-border-radius: 6px;
+}
+
+#mask_img_bg img {
+    width: 5.3rem;
+    height: 5.5rem;
+    margin: 0 auto;
+    display: block;
+}
+.cont-span {
+    display: block;
+    width: 120px;
+    height: 38px;
+    text-align: center;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    margin-left: -60px;
+    z-index: 10;
+    font-size:30px;
 }
 
 #bridgeContainer figcaption {
