--- a/wap/Tpl/main/css/scratch/style.css
+++ b/wap/Tpl/main/css/scratch/style.css
@@ -72,7 +72,7 @@ figcaption{
     margin: 0 auto;
     display: block;
 }
-.cont-span {
+/*.cont-span {
     display: block;
     width: 120px;
     height: 38px;
@@ -83,7 +83,7 @@ figcaption{
     margin-left: -60px;
     z-index: 10;
     font-size:30px;
-}
+}*/
 
 #bridgeContainer figcaption {
   margin-top: 2rem;
